src/toggl_api.h

    typedef enum {
        TogglServerStaging = 0,
        TogglServerProduction
    } TogglServerType;
    // Callbacks that need to be implemented in UI

    typedef void (*TogglDisplayApp)(
        const bool_t open);
    typedef void (*TogglDisplaySyncState)(
        const int64_t state);
    typedef void (*TogglDisplayUnsyncedItems)(
        const int64_t count);
    typedef void (*TogglDisplayError)(
        const char_t *errmsg,
        const bool_t user_error);
    typedef void (*TogglDisplayOverlay)(
        const int64_t type);
    typedef void (*TogglDisplayUpdate)(
        const char_t *url);
    // Initialize/destroy an instance of the app

    TOGGL_EXPORT void *toggl_context_init(
        const char_t *app_name,
        const char_t *app_version);
    TOGGL_EXPORT void toggl_context_clear(
        void *context);
    // Set environment. By default, production is assumed. Optional.

    TOGGL_EXPORT void toggl_set_environment(
        void *context,
        const char_t *environment);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_environment(
        void *context);
    // Optionally, disable update check

    TOGGL_EXPORT void toggl_disable_update_check(
        void *context);
    // CA cert bundle must be configured from UI

    TOGGL_EXPORT void toggl_set_cacert_path(
        void *context,
        const char_t *path);
    // Redmine backend base URL (e.g. https://redmine.example.com).
    // Set before logging in.

    TOGGL_EXPORT void toggl_set_base_url(
        void *context,
        const char_t *url);
    // DB path must be configured from UI

    TOGGL_EXPORT bool_t toggl_set_db_path(
        void *context,
        const char_t *path);
    // Configure update download path for silent updates
    // Need to configure only if you have
    // enabled update check and have not set the
    // display update callback
    TOGGL_EXPORT void toggl_set_update_path(
        void *context,
        const char_t *path);
    // you must free the result
    TOGGL_EXPORT char_t *toggl_update_path(
        void *context);
    // Log path must be configured from UI

    TOGGL_EXPORT void toggl_set_log_path(
        const char_t *path);
    // Log level is optional

    TOGGL_EXPORT void toggl_set_log_level(
        const char_t *level);
    // Allow overriding the server in production

    TOGGL_EXPORT void toggl_set_staging_override(
        bool_t value);
    // To request what server is set up in the library

    TOGGL_EXPORT TogglServerType toggl_get_server_type();
    // Ignoring SSL verification can be turned on in the UI
    TOGGL_EXPORT bool_t toggl_set_settings_ignore_cert(
        void *context,
        const bool_t ignore);
    // Various parts of UI can tell the app to show itself.

    TOGGL_EXPORT void toggl_show_app(
        void *context);
    // Configure the UI callbacks. Required.

    TOGGL_EXPORT void toggl_on_show_app(
        void *context,
        TogglDisplayApp cb);
    TOGGL_EXPORT void toggl_on_sync_state(
        void *context,
        TogglDisplaySyncState cb);
    TOGGL_EXPORT void toggl_on_unsynced_items(
        void *context,
        TogglDisplayUnsyncedItems cb);
    TOGGL_EXPORT void toggl_on_error(
        void *context,
        TogglDisplayError cb);
    TOGGL_EXPORT void toggl_on_overlay(
        void *context,
        TogglDisplayOverlay cb);
    TOGGL_EXPORT void toggl_on_update(
        void *context,
        TogglDisplayUpdate cb);