app/lib/src/native/toggl_api_generated.dart

// GENERATED CODE — DO NOT MODIFY BY HAND.
// Regenerate with: dart run ffigen --config ffigen.yaml
// ignore_for_file: type=lint, unused_field, unused_element, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// Generated FFI bindings for the Toggl/Redmine C core (src/toggl_api.h).
class TogglApiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TogglApiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TogglApiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initialize/destroy an instance of the app
  ffi.Pointer<ffi.Void> toggl_context_init(
    ffi.Pointer<ffi.Char> app_name,
    ffi.Pointer<ffi.Char> app_version,
  ) {
    return _toggl_context_init(app_name, app_version);
  }

  late final _toggl_context_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_context_init');
  late final _toggl_context_init = _toggl_context_initPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void toggl_context_clear(ffi.Pointer<ffi.Void> context) {
    return _toggl_context_clear(context);
  }

  late final _toggl_context_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_context_clear',
      );
  late final _toggl_context_clear = _toggl_context_clearPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Set environment. By default, production is assumed. Optional.
  void toggl_set_environment(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> environment,
  ) {
    return _toggl_set_environment(context, environment);
  }

  late final _toggl_set_environmentPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_environment');
  late final _toggl_set_environment = _toggl_set_environmentPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_environment(ffi.Pointer<ffi.Void> context) {
    return _toggl_environment(context);
  }

  late final _toggl_environmentPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_environment');
  late final _toggl_environment = _toggl_environmentPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  /// Optionally, disable update check
  void toggl_disable_update_check(ffi.Pointer<ffi.Void> context) {
    return _toggl_disable_update_check(context);
  }

  late final _toggl_disable_update_checkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_disable_update_check',
      );
  late final _toggl_disable_update_check = _toggl_disable_update_checkPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// CA cert bundle must be configured from UI
  void toggl_set_cacert_path(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _toggl_set_cacert_path(context, path);
  }

  late final _toggl_set_cacert_pathPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_cacert_path');
  late final _toggl_set_cacert_path = _toggl_set_cacert_pathPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// Redmine backend base URL (e.g. https://redmine.example.com).
  /// Set before logging in.
  void toggl_set_base_url(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> url,
  ) {
    return _toggl_set_base_url(context, url);
  }

  late final _toggl_set_base_urlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_base_url');
  late final _toggl_set_base_url = _toggl_set_base_urlPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// DB path must be configured from UI
  int toggl_set_db_path(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _toggl_set_db_path(context, path);
  }

  late final _toggl_set_db_pathPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_db_path');
  late final _toggl_set_db_path = _toggl_set_db_pathPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  /// Configure update download path for silent updates
  /// Need to configure only if you have
  /// enabled update check and have not set the
  /// display update callback
  void toggl_set_update_path(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _toggl_set_update_path(context, path);
  }

  late final _toggl_set_update_pathPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_update_path');
  late final _toggl_set_update_path = _toggl_set_update_pathPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// you must free the result
  ffi.Pointer<ffi.Char> toggl_update_path(ffi.Pointer<ffi.Void> context) {
    return _toggl_update_path(context);
  }

  late final _toggl_update_pathPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_update_path');
  late final _toggl_update_path = _toggl_update_pathPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  /// Log path must be configured from UI
  void toggl_set_log_path(ffi.Pointer<ffi.Char> path) {
    return _toggl_set_log_path(path);
  }

  late final _toggl_set_log_pathPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'toggl_set_log_path',
      );
  late final _toggl_set_log_path = _toggl_set_log_pathPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Log level is optional
  void toggl_set_log_level(ffi.Pointer<ffi.Char> level) {
    return _toggl_set_log_level(level);
  }

  late final _toggl_set_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'toggl_set_log_level',
      );
  late final _toggl_set_log_level = _toggl_set_log_levelPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Allow overriding the server in production
  void toggl_set_staging_override(int value) {
    return _toggl_set_staging_override(value);
  }

  late final _toggl_set_staging_overridePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'toggl_set_staging_override',
      );
  late final _toggl_set_staging_override = _toggl_set_staging_overridePtr
      .asFunction<void Function(int)>();

  /// To request what server is set up in the library
  TogglServerType toggl_get_server_type() {
    return TogglServerType.fromValue(_toggl_get_server_type());
  }

  late final _toggl_get_server_typePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
        'toggl_get_server_type',
      );
  late final _toggl_get_server_type = _toggl_get_server_typePtr
      .asFunction<int Function()>();

  /// Ignoring SSL verification can be turned on in the UI
  int toggl_set_settings_ignore_cert(
    ffi.Pointer<ffi.Void> context,
    int ignore,
  ) {
    return _toggl_set_settings_ignore_cert(context, ignore);
  }

  late final _toggl_set_settings_ignore_certPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_ignore_cert');
  late final _toggl_set_settings_ignore_cert =
      _toggl_set_settings_ignore_certPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  /// Various parts of UI can tell the app to show itself.
  void toggl_show_app(ffi.Pointer<ffi.Void> context) {
    return _toggl_show_app(context);
  }

  late final _toggl_show_appPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_show_app',
      );
  late final _toggl_show_app = _toggl_show_appPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Configure the UI callbacks. Required.
  void toggl_on_show_app(ffi.Pointer<ffi.Void> context, TogglDisplayApp cb) {
    return _toggl_on_show_app(context, cb);
  }

  late final _toggl_on_show_appPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayApp)
        >
      >('toggl_on_show_app');
  late final _toggl_on_show_app = _toggl_on_show_appPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayApp)>();

  void toggl_on_sync_state(
    ffi.Pointer<ffi.Void> context,
    TogglDisplaySyncState cb,
  ) {
    return _toggl_on_sync_state(context, cb);
  }

  late final _toggl_on_sync_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplaySyncState)
        >
      >('toggl_on_sync_state');
  late final _toggl_on_sync_state = _toggl_on_sync_statePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplaySyncState)
      >();

  void toggl_on_unsynced_items(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayUnsyncedItems cb,
  ) {
    return _toggl_on_unsynced_items(context, cb);
  }

  late final _toggl_on_unsynced_itemsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayUnsyncedItems)
        >
      >('toggl_on_unsynced_items');
  late final _toggl_on_unsynced_items = _toggl_on_unsynced_itemsPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayUnsyncedItems)
      >();

  void toggl_on_error(ffi.Pointer<ffi.Void> context, TogglDisplayError cb) {
    return _toggl_on_error(context, cb);
  }

  late final _toggl_on_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayError)
        >
      >('toggl_on_error');
  late final _toggl_on_error = _toggl_on_errorPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayError)>();

  void toggl_on_overlay(ffi.Pointer<ffi.Void> context, TogglDisplayOverlay cb) {
    return _toggl_on_overlay(context, cb);
  }

  late final _toggl_on_overlayPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayOverlay)
        >
      >('toggl_on_overlay');
  late final _toggl_on_overlay = _toggl_on_overlayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayOverlay)>();

  void toggl_on_update(ffi.Pointer<ffi.Void> context, TogglDisplayUpdate cb) {
    return _toggl_on_update(context, cb);
  }

  late final _toggl_on_updatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayUpdate)
        >
      >('toggl_on_update');
  late final _toggl_on_update = _toggl_on_updatePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayUpdate)>();
